# AEVP

./: LICENSE  README.md  pyproject.toml  run.py
docs/: Architecture-ja.md  ClaimDraft-ja.md  DeveloperGuide.md  HowToUploadToGitHub.md  PatentMapping.md  PatentMemo-ja.md  Philosophy.md  Roadmap.md  UseCases-ja.md
src/aevp/: __init__.py  pipeline.py  predictor.py  scoring.py  types.py
tests/: conftest.py  test_pipeline.py  test_predictor.py  test_scoring.py
